--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>agri-ai-recommend</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>AgriAI - Recomendaciones Agrícolas Inteligentes</title>
+    <meta name="description" content="Recomendaciones agrícolas inteligentes impulsadas por IA para optimizar el rendimiento de cultivos y decisiones de agricultura" />
+    <meta name="author" content="Equipo AgriAI" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
 
-    <meta property="og:title" content="agri-ai-recommend" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="AgriAI - Recomendaciones Agrícolas Inteligentes" />
+    <meta property="og:description" content="Recomendaciones agrícolas inteligentes impulsadas por IA para optimizar el rendimiento de cultivos y decisiones de agricultura" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
